--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -96,6 +96,7 @@ STYLESHEET INDEXING
 @import "template/blog";
 @import "template/contact";
 @import "template/career";
+@import "template/job_detail";
 
 
 /*=======================================================================
