--- a/src/assets/scss/template/_career.scss
+++ b/src/assets/scss/template/_career.scss
@@ -174,11 +174,14 @@
       font-size: var(--font-body-3);
    }
    @media only screen and (max-width: 479px) {
+      &__name {
+         font-size: 10px;
+      }
       &__salary_count {
-         font-size: 11px;
+         font-size: 10px;
       }
       &__compay {
-         font-size: 11px;
+         font-size: 10px;
       }
    }
 }
