job details page add

--- a/src/assets/scss/template/_career.scss
+++ b/src/assets/scss/template/_career.scss
@@ -176,12 +176,18 @@
    @media only screen and (max-width: 479px) {
       &__name {
          font-size: 10px;
+         padding: 0px;
+         margin: 0px;
       }
       &__salary_count {
          font-size: 10px;
+         padding: 0px;
+         margin: 0px;
       }
       &__compay {
          font-size: 10px;
+         padding: 0px;
+         margin: 0px;
       }
    }
 }
