Apply Job Form Page Done

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -85,7 +85,7 @@ STYLESHEET INDEXING
 @import "elements/cardSeven";
 @import "elements/cardEight";
 @import "elements/jobCard";
-
+@import "elements/applyjobform";
 
 /*=======================================================================
 3. Template Styles
