--- a/src/assets/scss/template/_career.scss
+++ b/src/assets/scss/template/_career.scss
@@ -77,11 +77,18 @@
 @media only screen and (max-width: 479px) {
    .joblist_section__title {
       text-align: left;
-      font-size: 16px;
+      font-size: 14px;      
+      line-height: 30px;
+
    }
    .filter_form {
       float: left;
    }
+   .crouselCardItem {
+      padding: 10px;
+      width: 331px !important;
+   }
+   
 }
 .joblist_section__job-type-form {
    float: left;
@@ -106,7 +113,7 @@
    font-size: 14px;
    border: 0.830103px solid #e6e6e6;
    border-radius: 48px;
-   margin-right: 15px;
+   margin-right: 10px;
    padding-left: 15px;
 }
 
@@ -288,6 +295,6 @@
 }
 @media only screen and (max-width: 479px) {
    .cardevents_date-box{
-      top: 50%;
+      top: 43%;
    }
 }
