--- a/src/assets/scss/elements/_global.scss
+++ b/src/assets/scss/elements/_global.scss
@@ -159,6 +159,12 @@ input::placeholder {
       margin-right: 0px!important;
    
    }
+   .btn-default {
+      padding-top: 10px;
+      padding-bottom: 10px;
+      padding-left: 15px;
+      padding-right: 15px;
+   }
 }
 .crouselItem{
    padding: 10px;
