--- a/src/assets/scss/template/_career.scss
+++ b/src/assets/scss/template/_career.scss
@@ -135,7 +135,7 @@
       font-size: 22px;
    }
    .portfolioreview__section__custom_view {
-      text-align: center !important;
+      text-align: center ;
    }
    .joblist_section_new-old {
       font-size: 10px;
