--- a/src/assets/scss/elements/_cardFive.scss
+++ b/src/assets/scss/elements/_cardFive.scss
@@ -26,6 +26,7 @@
         font-family:Montserrat-Bold;
         color: #343A40;
         font-size: var(--font-body-3);
+        line-height: 10px;
     }
     &__designation{
         font-family: Montserrat-Medium;
