--- a/src/assets/scss/template/_career.scss
+++ b/src/assets/scss/template/_career.scss
@@ -75,6 +75,12 @@
    float: right;
 }
 @media only screen and (max-width: 479px) {
+   .jobsearch_section {
+      padding-bottom: 0px;
+   }
+   .joblist_section {
+      padding-top: 0rem;
+   }
    .joblist_section__title {
       text-align: left;
       font-size: 14px;      
