--- a/src/assets/scss/elements/_global.scss
+++ b/src/assets/scss/elements/_global.scss
@@ -165,6 +165,12 @@ input::placeholder {
       padding-left: 15px;
       padding-right: 15px;
    }
+   .btn-default-circled {
+      padding-top: 10px;
+      padding-bottom: 10px;
+      padding-left: 10px;
+      padding-right: 10px;
+   }
 }
 .crouselItem{
    padding: 10px;
@@ -182,10 +188,10 @@ input::placeholder {
    .containerCrousel{
       padding-top: 2rem;
    }
-   // .crouselItem{
-   //    padding: 10px;
-   //    width: 340px !important;
-   // }
+   .hidden-mobile{
+      display: none;
+   }
+
 }
 @media only screen and (max-width: 375px) {
       .crouselItem{
