--- a/src/assets/scss/elements/_global.scss
+++ b/src/assets/scss/elements/_global.scss
@@ -171,6 +171,12 @@ input::placeholder {
       padding-left: 10px;
       padding-right: 10px;
    }
+   .btn-default:hover {
+      padding-top: 10px;
+      padding-bottom: 10px;
+      padding-left: 15px;
+      padding-right: 15px;
+   }
 }
 .crouselItem{
    padding: 10px;
